--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,16 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.toolbar-background{
+  background-color: #bb00fe;
+}
+.bar-button-menutoggle{
+  background-color: #c86dfe;
+  color: #ffffff;
+}
+.toolbar-title{
+  color: #ffffff;
+}
+.content{
+  background-color: #e497fe !important;
+}
