--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,15 +15,68 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 .toolbar-background{
-  background-color: #bb00fe;
+  background-color: #7900ff;
+}
+.bg-theme-2{
+  background-color: #904aff;
 }
 .bar-button-menutoggle{
-  background-color: #c86dfe;
+  background-color: #904aff;
   color: #ffffff;
 }
 .toolbar-title{
   color: #ffffff;
 }
-.content{
-  background-color: #e497fe !important;
+.content, .bg-theme{
+  background-color: #c5b7ff;
+}
+.bg-white{
+  background-color: #ffffff;
+}
+.font-color-theme{
+  color: #7900ff;
+}
+.flex{
+  display: flex;
+}
+.justify-center{
+  justify-content: center
+}
+.img-45{
+  width: 45%;
+  height: auto;
+}
+.img-25{
+  width: 25%;
+  height: auto;
+}
+.mb-5{
+  margin-bottom: 5px;
+}
+.line-break-down{
+  white-space: normal !important;
+}
+.font-title-h3{
+  font-size: 2.2rem !important;
+  font-weight: bold !important;
+}
+.font-title-h4{
+  font-size: 1.8rem !important;
+  font-weight: bold !important;
+}
+.border-radius{
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  border-radius: 25px;
+}
+.b-dotted{
+  padding-bottom: 10px;
+  border-bottom: 3px dotted #7900ff;
+}
+.p-16{
+  padding-right: 16px;
+  padding-left: 16px;
+}
+.back-button{
+  color: #ffffff;
 }
