--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -77,6 +77,10 @@
   padding-right: 16px;
   padding-left: 16px;
 }
+.m-10{
+  margin-right: 10px !important;
+  margin-left: 10px !important;
+}
 .back-button{
   color: #ffffff;
 }
