--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -73,6 +73,9 @@
   padding-bottom: 10px;
   border-bottom: 3px dotted #7900ff;
 }
+.b-dotted-np{
+  border-bottom: 3px dotted #7900ff;
+}
 .p-16{
   padding-right: 16px;
   padding-left: 16px;
@@ -83,4 +86,16 @@
 }
 .back-button{
   color: #ffffff;
+}
+.pb-2{
+  padding-bottom: 0 !important;
+  margin-bottom: 0 !important;
+}
+.ptb-5{
+  padding-bottom: 5px;
+  padding-top: 5px;
+}
+.title-card{
+  margin-bottom: 0 !important;
+  min-height: 3.5rem;
 }
